Correção de erros e porcentagem de completude

--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,9 @@
         <div class="loader">
             <img hidden src="https://c.tenor.com/I6kN-6X7nhAAAAAj/loading-buffering.gif" alt="" id="loader">
         </div>
+        <div>
+            <p hidden id="percentage">0%</p>
+        </div>
     </div>
 </body>
 </html>
