mudança na mudança de paleta e opção de dither

--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,10 @@
                 <div class="input">
                     <input type="text" id="nome" name="nome" placeholder="Nome da Função">
                 </div>
+                <div>
+                    <input type="checkbox" id="dithering" name="dithering">
+                    <label for="dithering">Dithering</label>
+                </div>
             </div>
             <div>
                 <div class="input">
